[package]
name = "librefang-runtime-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) client for LibreFang runtime"

[dependencies]
librefang-types = { path = "../librefang-types" }
librefang-http = { path = "../librefang-http" }
rmcp = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
http = "1"
async-trait = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
psl = { workspace = true }
url = { workspace = true }
rand = { workspace = true }
arc-swap = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
