[package]
name = "librefang-runtime-media"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Media generation drivers (TTS, image, video, music) for LibreFang (refs #3710 Phase 1)"

[dependencies]
librefang-types = { path = "../librefang-types" }
librefang-http = { path = "../librefang-http" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
