[package]
name = "librefang-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent runtime and execution environment for LibreFang"

[dependencies]
librefang-types = { path = "../librefang-types" }
librefang-channels = { path = "../librefang-channels" }
librefang-memory = { path = "../librefang-memory" }
librefang-skills = { path = "../librefang-skills" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
tokio-stream = { workspace = true }
wasmtime = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
dashmap = { workspace = true }
regex-lite = { workspace = true }
rusqlite = { workspace = true }
tokio-tungstenite = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
rustls-native-certs = { workspace = true }
ureq = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
shlex = "1"
toml = { workspace = true }
dirs = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
