[package]
name = "librefang-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent runtime and execution environment for LibreFang"
readme = "README.md"

[dependencies]
librefang-types = { path = "../librefang-types" }
librefang-subprocess = { path = "../librefang-subprocess" }
librefang-http = { path = "../librefang-http" }
librefang-kernel-handle = { path = "../librefang-kernel-handle" }
librefang-runtime-audit = { path = "../librefang-runtime-audit" }
librefang-runtime-media = { path = "../librefang-runtime-media", optional = true }
librefang-runtime-sandbox-docker = { path = "../librefang-runtime-sandbox-docker", optional = true }
librefang-runtime-mcp = { path = "../librefang-runtime-mcp" }
librefang-llm-drivers = { path = "../librefang-llm-drivers" }
librefang-llm-driver = { path = "../librefang-llm-driver" }
librefang-channels = { path = "../librefang-channels", default-features = false }
librefang-memory = { path = "../librefang-memory" }
librefang-skills = { path = "../librefang-skills" }
librefang-storage = { path = "../librefang-storage", default-features = false }
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { version = "2", features = ["alloc"] }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
wasmtime = { workspace = true }
# Phase-7 C-001: WASI Preview 2 host. Bound by sandbox_component.rs into
# the Component plugin host's linker so language-runtime init code
# (CPython, StarlingMonkey, Go runtime, cargo-component's wasi-rt) finds
# its `wasi:*` imports satisfied. WasiCtx is deny-by-default — the
# librefang capability list remains the real gate (see assessment.md D2).
wasmtime-wasi = { workspace = true }
# Phase-7 C-006: StarlingMonkey (jco componentize) auto-imports wasi:http/types
# even when JS source doesn't use HTTP. Wire the linker so instantiation succeeds.
wasmtime-wasi-http = { workspace = true }
dashmap = { workspace = true }
regex-lite = { workspace = true }
# Full `regex` (RE2-based) — used by `pii_filter` so operator-
# supplied patterns can be bounded via `RegexBuilder.size_limit`
# / `.dfa_size_limit`. `regex-lite` has no equivalent guard.
# Audit: pii-filter-regex-no-size-cap.
regex = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
tokio-tungstenite = { workspace = true }
ureq = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
http = "1"
shlex = "2"
once_cell = "1"
parking_lot = "0.12"
toml = { workspace = true }
url = { workspace = true }
dirs = { workspace = true }
tempfile = { workspace = true }
surrealdb = { workspace = true, optional = true }
pdf-extract = "0.12"
# SSH transport for the optional remote-exec backend (#3332).
# Locked behind the `ssh-backend` feature so the dependency tree stays
# trim for users who only need the local / Docker backends.
# 0.61 is the first release patched for the russh / russh-cryptovec
# advisories (GHSA-wwx6-x28x-8259, GHSA-g9f8-wqj9-fjw5, …). The separate
# `russh-keys` crate was merged into `russh::keys` after 0.50, so it is
# no longer a direct dependency. russh pulls its own `rand_core` for the
# handshake RNG; this crate never hands an RNG across that boundary, so
# the duplicate coexists with the workspace's `rand = "0.10"` rather than
# colliding on the trait surface.
russh = { version = "0.61", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Linux-only LSM / seccomp sandboxing backends. Platform-gated so the
# `landlock-sandbox` / `seccomp-sandbox` features can ship in `default`
# without dragging Linux-only crates into the macOS / Windows dependency
# graph — the `dep:landlock` / `dep:seccompiler` feature activations are
# simply no-ops on targets where these deps are not present, and the
# code that touches them is already `#[cfg(all(target_os = "linux", feature = ...))]`.
[target.'cfg(target_os = "linux")'.dependencies]
landlock = { version = "0.4", optional = true }
seccompiler = { version = "0.5", optional = true }

[dev-dependencies]
# Phase-8 C-005: test-stub feature enables KernelHandleStub used by plugin_example_* tests.
librefang-kernel-handle = { path = "../librefang-kernel-handle", features = ["test-stub"] }
serial_test = "3"
proptest = "1"
metrics-util = { version = "0.20", features = ["debugging"] }
# Used by the Daytona backend wire-shape tests (#4677 review). Same
# version that `librefang-channels`, `librefang-llm-drivers`, and
# `librefang-runtime-mcp` already pin in this workspace, so no new
# transitive deps land in `Cargo.lock`.
wiremock = "0.6"
tracing-subscriber = { workspace = true }
# Phase-5 C-006: aot_cache tests build an empty Component fixture from
# `(component)` WAT. Standalone crate (no wasmtime feature flip needed).
wat = "1"

[features]
default = ["surreal-backend", "media", "browser", "docker-sandbox", "seccomp-sandbox", "landlock-sandbox"]
landlock-sandbox = ["dep:landlock"]
seccomp-sandbox = ["dep:seccompiler"]
wasm-hooks = []
## Forward to `librefang-llm-drivers/uar-driver` so the runtime exposes the
## UAR (Universal Agent Runtime) LLM driver and registers a synthetic
## "uar" provider in the model catalog.
uar-driver = ["librefang-llm-drivers/uar-driver"]
## Storage backend selection (Phase 4 of `surrealdb-storage-swap`).
surreal-backend = ["librefang-storage/surreal-backend", "librefang-memory/surreal-backend", "dep:surrealdb"]
sqlite-backend = ["librefang-storage/sqlite-backend", "librefang-memory/sqlite-backend"]
# Remote SSH tool-execution backend (#3332).
ssh-backend = ["dep:russh"]
# Daytona managed-sandbox tool-execution backend (#3332).
# Uses the existing reqwest stack — no new top-level deps needed.
daytona-backend = []
# Optional subsystems (refs #3710 Phase 1). On by default — `cargo build
# -p librefang-runtime --no-default-features` excludes the corresponding
# modules and consumer code paths so build-time configurations can omit
# whole subsystems for size/security.
media = ["dep:librefang-runtime-media"]
browser = []
docker-sandbox = ["dep:librefang-runtime-sandbox-docker"]


[lints]
workspace = true
