[package]
name = "librefang-subprocess"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Persistent JSON-over-stdio subprocess transport shared by LibreFang's sidecar bridges"
readme = "README.md"

[dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
