[package]
name = "librefang-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for the LibreFang Agent OS"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
fluent = { workspace = true }
unic-langid = { workspace = true }
regex-lite = { workspace = true }
librefang-storage = { path = "../librefang-storage", default-features = false }

[features]
default = []
# Re-exports for downstream crates that want the surreal storage backend wired
# in through `librefang-types`.
storage-surreal = ["librefang-storage/surreal-backend"]
storage-sqlite = ["librefang-storage/sqlite-backend"]

[dev-dependencies]
rmp-serde = { workspace = true }
