[package]
name = "librefang-uar-spec"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UAR-AGENT-MD specification types, parser, and AgentManifest translator for librefang"

[dependencies]
librefang-types = { path = "../librefang-types" }

serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
