[package]
name = "ruvector-solver"
version = "2.0.4"
edition = "2021"
rust-version = "1.77"
license = "MIT"
authors = ["Ruvector Team"]
repository = "https://github.com/ruvnet/ruvector"
description = "Sublinear-time solver for RuVector: O(log n) to O(√n) algorithms for sparse linear systems, PageRank, and spectral methods"
keywords = ["linear-algebra", "sparse-matrix", "pagerank", "solver", "sublinear"]
categories = ["mathematics", "science", "algorithms"]

[features]
default = ["neumann", "cg", "forward-push"]
nalgebra-backend = ["nalgebra"]
parallel = ["rayon", "crossbeam"]
simd = []
wasm = []
full = ["nalgebra-backend", "parallel", "all-algorithms"]
neumann = []
forward-push = []
backward-push = []
hybrid-random-walk = ["getrandom"]
true-solver = ["neumann"]
cg = []
bmssp = []
all-algorithms = ["neumann", "forward-push", "backward-push", "hybrid-random-walk", "true-solver", "cg", "bmssp"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
rand = "0.8"
nalgebra = { version = "0.33", default-features = false, features = ["std"], optional = true }
rayon = { version = "1.10", optional = true }
crossbeam = { version = "0.8", optional = true }
getrandom = { version = "0.2", optional = true }
dashmap = "6.1"
parking_lot = "0.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
approx = "0.5"

[[bench]]
name = "solver_baseline"
harness = false

[[bench]]
name = "solver_neumann"
harness = false

[[bench]]
name = "solver_cg"
harness = false

[[bench]]
name = "solver_push"
harness = false

[[bench]]
name = "solver_e2e"
harness = false
