[workspace]

[package]
# BossFang fork: SDK crate renamed to bossfang-sdk on crates.io to keep
# the upstream `librefang` name available for legitimate library uses
# and to avoid confusion between the two builds.
name = "bossfang-sdk"
version = "2026.5.12-beta.11"
edition = "2021"
description = "Official Rust client for BossFang Agent OS"
license = "MIT"
repository = "https://github.com/GQAdonis/librefang"
keywords = ["bossfang", "agent", "ai"]
authors = ["BossFang Maintainers"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
futures = "0.3"
