[workspace]
# Independent of the kernel workspace: this SDK is consumed by external
# Rust adapters and must not pull in librefang-channels / librefang-kernel
# as transitive deps. Keeping it a separate workspace root also isolates
# its target/ from the kernel's shared one.

[package]
name = "librefang-sidecar"
version = "0.1.0"
edition = "2021"
description = "SDK for writing LibreFang sidecar channel adapters in Rust"
license = "MIT"
repository = "https://github.com/librefang/librefang"
homepage = "https://librefang.ai"
keywords = ["librefang", "sidecar", "channel", "agent", "ai"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"
rust-version = "1.80"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "io-util", "rt", "rt-multi-thread", "macros", "sync", "time", "signal"] }
async-trait = "0.1"
futures-core = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[[example]]
name = "echo"
path = "examples/echo.rs"
